# dependency-risk-scan

./: .gitignore  README.md  pyproject.toml
deprisk/: cli.py  github.py  models.py  osv.py  pypi.py  report.py  resolver.py
docs/superpowers/plans/: 2026-05-31-dependency-risk.md
docs/superpowers/specs/: 2026-05-31-dependency-risk-design.md
tests/: test_cli.py  test_github.py  test_models.py  test_osv.py  test_pypi.py  test_report.py  test_resolver.py
