[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "deprisk"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "rich",
    "packaging",
]

[project.scripts]
deprisk = "deprisk.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
